--- a/package.json
+++ b/package.json
@@ -1,21 +1,44 @@
 {
-  "name": "appanalyzer",
-  "version": "0.0.1",
-  "description": "",
-  "private": true,
-  "devDependencies": {
-    "@abaplint/cli": "^2.32.1",
-    "@sap/ui5-builder-webide-extension": "1.0.9",
-    "@ui5/cli": "1.7.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-ui5": "^0.1.0"
-  },
-  "scripts": {
-    "build": "ui5 build --include-task=generateManifestBundle generateCachebusterInfo"
-  },
-  "ui5": {
-    "dependencies": [
-      "@sap/ui5-builder-webide-extension"
-    ]
-  }
+    "name": "com.mindset.appanalyzer",
+    "version": "0.0.1",
+    "description": "",
+    "private": true,
+    "devDependencies": {
+        "@abaplint/cli": "^2.32.1",
+        "@sap/ui5-builder-webide-extension": "1.0.9",
+        "eslint": "^6.8.0",
+        "eslint-plugin-ui5": "^0.1.0",
+        "@ui5/cli": "^3.0.0",
+        "@sap/ux-ui5-tooling": "1",
+        "rimraf": "3.0.2",
+        "@sap/ux-specification": "UI5-1.65",
+        "ui5-task-flatten-library": "0.2.5"
+    },
+    "scripts": {
+        "build_old": "ui5 build --include-task=generateManifestBundle generateCachebusterInfo",
+        "start": "fiori run --open \"test/flpSandbox.html?sap-client=100&sap-ui-xx-viewCache=false#OVP-display\"",
+        "start-local": "fiori run --config ./ui5-local.yaml --open \"test/flpSandboxMockServer.html?sap-client=100&sap-ui-xx-viewCache=false#OVP-display\"",
+        "start-noflp": "fiori run --open \"index.html?sap-client=100&sap-ui-xx-viewCache=false\"",
+        "start-variants-management": "fiori run --open \"preview.html?sap-client=100&sap-ui-xx-viewCache=false&fiori-tools-rta-mode=true&sap-ui-rta-skip-flex-validation=true#preview-app\"",
+        "build": "ui5 build -a --clean-dest --include-task=generateCachebusterInfo",
+        "deploy": "npm run build && fiori deploy --config ui5-deploy.yaml && rimraf archive.zip",
+        "deploy-config": "fiori add deploy-config",
+        "start-mock": "fiori run --open \"test/flpSandboxMockServer.html?sap-client=100&sap-ui-xx-viewCache=false#OVP-display\"",
+        "undeploy": "fiori undeploy --config ui5-deploy.yaml",
+        "deploy-test": "npm run build && fiori deploy --config ui5-deploy.yaml --testMode true"
+    },
+    "ui5": {
+        "dependencies": [
+            "@sap/ui5-builder-webide-extension",
+            "ui5-task-flatten-library"
+        ]
+    },
+    "sapux": true,
+    "sapuxLayer": "CUSTOMER_BASE",
+    "keywords": [
+        "ui5",
+        "openui5",
+        "sapui5"
+    ],
+    "main": "webapp/index.html"
 }
