--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -28,6 +28,20 @@
                 }
             }
         },
+        "crossNavigation": {
+            "inbounds": {
+                "com-mindset-appanalyzerbtp-inbound": {
+                    "signature": {
+                        "parameters": {},
+                        "additionalParameters": "allowed"
+                    },
+                    "semanticObject": "fioriappanalyzer",
+                    "action": "experience",
+                    "title": "{{flpTitle}}",
+                    "icon": ""
+                }
+            }
+        },
         "sourceTemplate": {
             "id": "OVP.cardtemplate",
             "version": "0.0.0",
@@ -191,5 +205,9 @@
     "sap.platform.abap": {
         "uri": "/sap/bc/ui5_ui5/mindset/app_analyzer/webapp",
         "_version": "1.1.0"
+    },
+    "sap.cloud": {
+        "public": true,
+        "service": "commindsetappanalyzer"
     }
 }
