--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "@sap/ux-ui5-tooling": "1",
         "rimraf": "3.0.2",
         "@sap/ux-specification": "UI5-1.65",
-        "ui5-task-flatten-library": "0.2.5"
+        "ui5-task-flatten-library": "0.2.5",
+        "ui5-task-zipper": "^0.5.0",
+        "mbt": "^1.2.18"
     },
     "scripts": {
         "build_old": "ui5 build --include-task=generateManifestBundle generateCachebusterInfo",
@@ -25,12 +27,16 @@
         "deploy-config": "fiori add deploy-config",
         "start-mock": "fiori run --open \"test/flpSandboxMockServer.html?sap-client=100&sap-ui-xx-viewCache=false#OVP-display\"",
         "undeploy": "fiori undeploy --config ui5-deploy.yaml",
-        "deploy-test": "npm run build && fiori deploy --config ui5-deploy.yaml --testMode true"
+        "deploy-test": "npm run build && fiori deploy --config ui5-deploy.yaml --testMode true",
+        "build:cf": "ui5 build preload --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo",
+        "build:mta": "rimraf resources mta_archives && mbt build"
     },
     "ui5": {
         "dependencies": [
             "@sap/ui5-builder-webide-extension",
-            "ui5-task-flatten-library"
+            "ui5-task-flatten-library",
+            "ui5-task-zipper",
+            "mbt"
         ]
     },
     "sapux": true,
