--- a/ui5-local.yaml
+++ b/ui5-local.yaml
@@ -30,9 +30,9 @@ server:
         ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
         backend:
           - path: /sap
-            url: http://s4h2020cf:44300
+            url: http://s4h2022:443
             client: '100'
-            destination: MWHIGHAM_S4H
+            destination: MINDSET_S4H
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
